--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -65,9 +65,9 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "The real estate developer"
   links:
-    #- label: "Website"
-    #  icon: "fas fa-fw fa-link"
-    #  url: "https://"
+    - label: "If you're looking for the Guides, click here"
+      icon: "fas fa-fw fa-link"
+      url: "https://guides.alwaysdata.net"
     #- label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
     #  url: "https://twitter.com/"
