--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -78,6 +78,10 @@ author:
     #  icon: "fab fa-fw fa-instagram"
     #  url: "https://instagram.com/"
 
+sidebar:
+  - Title: "test"
+    text: "This is the homepage for Bob's real estate developments. It's 50% archiving and 50% keeping the financiers up-to-date. [If you're looking for the Guides, click here.](https://guides.alwaysdata.net)"
+
 footer:
   links:
     #- label: "Twitter"
@@ -97,7 +101,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: false
       comments: false
       share: false
