--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -94,6 +94,14 @@ footer:
     #  icon: "fab fa-fw fa-instagram"
     #  url: "https://instagram.com/"
 
+collections:
+  site-info:
+    output: true
+    permalink: /:collection/:path/
+  project-info:
+    output: true
+    permalink: /:collection/:path/
+
 defaults:
   # _posts
   - scope:
@@ -115,6 +123,22 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _site-info
+  - scope:
+      path: "_site-info"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      toc: true
+  # _project-info
+  - scope:
+      path: "_project-info"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      toc: true
 
 category_archive:
   type: liquid
