--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -6,9 +6,9 @@ main:
   - title: "Project Updates"
     url: /tags/
   - title: "Project Info"
-    url: /project-info/
+    url: /categories/project-info/
   - title: "Site Info"
-    url: /site-info/
+    url: /categories/site-info/
   #- title: "Categories"
   #  url: /categories/
   #- title: "Posts"
