--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -61,7 +61,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Bob"
+  name   : "Mog"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "This is the real estate side of things. If you're after the Guides to Life, that's the other website, linked below."
   links:
