--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,6 +30,7 @@ search: true
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+exclude: [".gitignore", "LICENSE", "README.md"]
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
